# rules_jest_example

./: .bazelignore  .gitignore  README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml
bar/: BUILD.bazel  package.json  tsconfig.json
bar/src/: index.ts
foo/: BUILD.bazel  jest.config.bazel.js  jest.config.js  package.json  setupTests.ts
foo/src/: index.test.ts
