load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_project(
    name = "bar_ts",
    tsconfig = ":tsconfig",
    # TODO: There are many issues that seem to only come up from using
    # workers. These should be reported and links to upstream issues
    # linked here.
    resolve_json_module = True,
    source_map=True,
    declaration=True,
    supports_workers = False,
    srcs = glob(
        include = ["src/**/*.ts"],
        exclude = ["src/**/*.test.ts"],
    ),
    deps = [
        ":node_modules",
    ],
)

npm_package(
    name = "bar",
    srcs = [
        "package.json",
        ":bar_ts",
    ],
    # This is a perf improvement; the default will be flipped to False in rules_js 2.0
    include_runfiles = False,
    visibility = ["//:__subpackages__"],
)
